# MatrixClientLibrary

./: .gitmodules  LICENSE  Makefile  Readme.md  Todo.md
esp32/esp_project/: CMakeLists.txt  README.md  sdkconfig
esp32/esp_project/components/matrix/: CMakeLists.txt
esp32/esp_project/components/olm/: CMakeLists.txt
esp32/esp_project/main/: CMakeLists.txt  SendEncrypted.c  Verify.c  main.c  wifi.c  wifi.h
esp32/esp_project_risc_v/: sdkconfig
esp32/esp_project_risc_v/components/matrix/: CMakeLists.txt
esp32/esp_project_risc_v/main/: CMakeLists.txt
examples/: Canonical.c  Cli.c  Cli.rdbg  Decrypt.c  Decrypt.rdbg  Keys.c  Keys.rdbg  Login.c  OlmJS.c  OlmJS.rdbg  ReplyRoomkey.c  Send.c  SendEncrypted.c  SendEncrypted.rdbg  Sync.c  Verify.c  Verify.rdbg
ext/mjson/src/: mjson.c
ext/olm/include/olm/: olm_export.h  session.hh
ext/olm/lib/crypto-algorithms/: aes.c  aes.h
ext/olm/src/: crypto.cpp  session.cpp
src/: fixedbuffer.c  fixedbuffer.h  matrix.c  matrix.h  matrix_http_curl.c  matrix_http_esp32.c  matrix_http_mongoose.c
